--- a/web/packages/scriptis/module/footer/index.scss
+++ b/web/packages/scriptis/module/footer/index.scss
@@ -15,54 +15,81 @@
  *
  */
 
-@import '@dataspherestudio/shared/common/style/variables.scss';
-.layout-footer {
-    position: $fixed;
-    right: 0;
-    bottom: 60px;
-    width: 40px;
-    background: transparent;
-    overflow: hidden;
-    z-index: 1000;
-}
+ @import '@dataspherestudio/shared/common/style/variables.scss';
+ .layout-footer {
+     position: $fixed;
+     right: 0;
+     bottom: 0;
+     top: 0;
+     left: 0;
+     pointer-events: none;
+     width: 100%;
+     background: transparent;
+     overflow: hidden;
+     z-index: 1000;
+     text-align: center;
+     cursor: move;
+     .tool-btns {
+       pointer-events: initial;
+       position: absolute;
+       width: 40px;
+       right: 40px;
+       bottom: 20px;
+     }
+     &:hover {
+       .min_arrow {
+         visibility: visible;
+       }
+     }
+     .min_arrow, .show_arrow {
+       font-size: 16px;
+       padding: 5px;
+       cursor: pointer;
+       &:hover {
+         @include font-color($primary-color, $dark-primary-color);
+       }
+     }
+     .min_arrow {
+       visibility: hidden;
+     }
+ }
 
-.footer-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: $border-width-base $border-style-base $border-color-base;
-    border-radius: 8px 0 0 8px;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, .2);
-    height: 40px;
-    line-height: 40px;
-    margin: 20px 0;
-    cursor: pointer;
-    font-size: 16px;
-}
-.footer-doc {
-    @include font-color(#333, #fff);
-    @include bg-color(#fff, #373F50);
-    @include border-color($border-color-base, #373F50);
-}
+ .footer-btn {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     border: $border-width-base $border-style-base $border-color-base;
+     border-radius: 8px;
+     box-shadow: 0px 1px 4px rgba(0, 0, 0, .2);
+     height: 40px;
+     line-height: 40px;
+     margin: 20px 0;
+     cursor: pointer;
+     font-size: 16px;
+ }
+ .footer-doc {
+     @include font-color(#333, #fff);
+     @include bg-color(#fff, #373F50);
+     @include border-color($border-color-base, #373F50);
+ }
 
-.footer-channel {
-    border: $border-width-base $border-style-base $border-color-base;
-    border-radius: $border-radius-small;
-    box-shadow: $shadow-base;
-    background-image: linear-gradient(39deg, $background-color-select-hover 0%, $background-color-base 100%);
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0.8;
-    cursor: move;
-    color: $text-color;
-    .footer-channel-job {
-        font-weight: 900;
-        margin-right: 0px;
-    }
-    .footer-channel-job-num {
-        font-size: $font-size-small;
-        color: $text-color;
-    }
-}
+ .footer-channel {
+     border: $border-width-base $border-style-base $border-color-base;
+     border-radius: $border-radius-small;
+     box-shadow: $shadow-base;
+     background-image: linear-gradient(39deg, $background-color-select-hover 0%, $background-color-base 100%);
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     opacity: 0.8;
+     cursor: move;
+     color: $text-color;
+     .footer-channel-job {
+         font-weight: 900;
+         margin-right: 0px;
+     }
+     .footer-channel-job-num {
+         font-size: $font-size-small;
+         color: $text-color;
+     }
+ }
