--- a/web/packages/workspace/module/newHome/index.scss
+++ b/web/packages/workspace/module/newHome/index.scss
@@ -130,7 +130,7 @@
         }
         .newHome_list_item {
           cursor: pointer;
-          min-width: 320px;
+          width: 320px;
           height: 116px;
           margin-bottom: 25px;
           box-sizing: border-box;
