--- a/web/packages/scriptis/module/footer/index.scss
+++ b/web/packages/scriptis/module/footer/index.scss
@@ -35,6 +35,7 @@
        width: 40px;
        right: 40px;
        bottom: 20px;
+       height: 150px;
      }
      &:hover {
        .min_arrow {
