--- a/web/packages/scriptis/module/hiveSidebar/hiveList/index.scss
+++ b/web/packages/scriptis/module/hiveSidebar/hiveList/index.scss
@@ -24,7 +24,7 @@
   height: 24px;
   line-height: 24px;
 
-  &::before{
+  .node-name::before{
     margin-right: 5px;
   }
 }
@@ -52,7 +52,7 @@
     text-overflow: ellipsis;
   }
   .node-name[data-open=open] {
-      color: #999;
+      color: #2186f1;
   }
   .v-hivetable-type {
     color: $yellow-color;
