--- a/web/packages/dss/assets/styles/app.scss
+++ b/web/packages/dss/assets/styles/app.scss
@@ -29,6 +29,7 @@ body {
     top: 0;
     bottom: 0;
     @include bg-color($body-background, $dark-base-color);
+    overflow: hidden;
 }
 
 .layout-content {
