--- a/web/packages/dss/module/newGuidance/index.scss
+++ b/web/packages/dss/module/newGuidance/index.scss
@@ -745,7 +745,7 @@
 
 // 第七步
 #mask7 {
-    position      : fixed;
+    position      : absolute;
     right         : 27px;
     bottom        : 103px;
     z-index       : 1003;
