打包分支信息

--- a/web/packages/shared/components/editor/index.scss
+++ b/web/packages/shared/components/editor/index.scss
@@ -22,7 +22,7 @@
 	width: 100%;
 
 	.monaco-menu-container a:hover {
-		color: #646465 !important;
+		color: #fff !important;
 	}
 	.glyphMarginClass {
 		background: #ff9900;
