loading mask area

--- a/web/packages/shared/components/resourceSimple/index.scss
+++ b/web/packages/shared/components/resourceSimple/index.scss
@@ -19,6 +19,7 @@
 
 .resource-simple-content {
     height: 400px;
+    position: relative;
     .queue-manager {
         position: $relative;
         width: 100%;
