fix dark theme style & user auto join to workspace

--- a/web/packages/dss/assets/styles/app.scss
+++ b/web/packages/dss/assets/styles/app.scss
@@ -124,3 +124,8 @@ body {
   height: 100%;
   z-index: 1001;
 }
+div.ivu-notice-notice-err {
+  background: rgb(251, 233, 233);
+  border: 1px solid #eaa8a8;
+  color: #333
+}
