--- a/web/packages/shared/common/style/overwrite.scss
+++ b/web/packages/shared/common/style/overwrite.scss
@@ -474,7 +474,7 @@
   .progress-label {
     color: $dark-text-color !important;
   }
-  .designer .node-selected {
+  .designer div.node-selected {
     background: rgba(222, 232, 244, 0.62);
     box-shadow: 1px 4px 6px 1px rgba(106, 141, 185, 0.65);
     border-radius: 4px;
