同步修复问题

--- a/web/packages/dss/assets/styles/app.scss
+++ b/web/packages/dss/assets/styles/app.scss
@@ -102,6 +102,7 @@ body {
 
 .ivu-modal-header {
   //   background-color: #FAFAFA !important;
+  border-radius: 6px 6px 0 0;
   @include bg-color(#FAFAFA, $dark-base-color);
 }
 
