--- a/web/packages/dss/assets/styles/app.scss
+++ b/web/packages/dss/assets/styles/app.scss
@@ -130,3 +130,13 @@ div.ivu-notice-notice-err {
   border: 1px solid #eaa8a8;
   color: #333
 }
+.release-notes {
+  padding-left: 10px;
+}
+.update-title {
+  padding: 5px 0 15px 0;
+  font-weight: 600;
+}
+.item-title{
+  padding: 5px 0;
+}
